--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-07-25 00:17:35
+lastsearch = 2024-07-25 02:45:17
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -187,9 +187,9 @@ title = 974 người theo dõi trên Pinterest - Petal Designs
 url = https://petaldesigns.co.za/ảnh-cặc-to-anime.html
 
 [m.facebook.com]
-match = -200.0%%
-title = Random Football - Giám đốc thể thao Dan Ashworth đã ...
-url = https://m.facebook.com/randomfootball247/photos/giám-đốc-thể-thao-dan-ashworth-đã-viết-một-bài-dài-cho-niên-giám-manchester-unit/122152373390246182/
+match = -187.5%%
+title = Zenless Zone Zero Việt Nam | Từ lúc chơi game đến bây ...
+url = https://m.facebook.com/groups/zzzvn/posts/852971510065216/
 
 [baomoi.com]
 match = -193.8%%
