--- a/images/chieu-nhua-thai-binh-08/config.ini
+++ b/images/chieu-nhua-thai-binh-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-08.html
 lastopen = 2024-06-09 23:16:13
 
 [search]
-lastsearch = 2024-07-24 22:38:19
+lastsearch = 2024-07-25 02:47:10
 
 [shopee.vn]
 match = -47.8%%
@@ -17,9 +17,9 @@ title = Xưởng sản xuất chiếu nhựa Thái Bình | Thai Binh
 url = https://m.facebook.com/61553157173242/
 
 [tiki.vn]
-match = -47.8%%
-title = Chiếu nhựa thái bình 1m2,m5,1m6,1m8 mầu ngẫu nhiên - ...
-url = https://tiki.vn/chieu-nhua-gap-gon-1m2-1m5-1m6-1m8-mau-ngau-nhien-hang-dep-p193384230.html?spid=193384235
+match = -21.7%%
+title = Chiếu nhựa thái bình 1m2,m5,1m6,1m8 mầu ngẫu nhiên
+url = https://tiki.vn/chieu-nhua-gap-gon-1m2-1m5-1m6-1m8-mau-ngau-nhien-hang-dep-p193384230.html?spid=193384238
 
 [trangvangvietnam.com]
 match = 21.7%%
@@ -59,7 +59,7 @@ url = https://thaibinhtv.vn/news/0/61643/san-xuat-theo-chieu-huong-hien-dai-quy-
 [www.diepxuan.com]
 match = 26.1%%
 title = Chiếu nhựa Thái Bình 80x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-thai-binh-80x190.html?srsltid=AfmBOor5nk1XR8kBSkoyPYDCv-j-e4-vxU6hexCIkV4TEytiUsdCH-Lh
+url = https://www.diepxuan.com/chieu-nhua-thai-binh-80x190.html
 
 [baothaibinh.com.vn]
 match = 17.4%%
