--- a/images/chieu-truc-cong-ty-14/config.ini
+++ b/images/chieu-truc-cong-ty-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-14.html
 lastopen = 2024-06-09 23:39:55
 
 [search]
-lastsearch = 2024-07-25 01:44:47
+lastsearch = 2024-07-25 02:53:13
 
 [chieutrucsaigon.com]
 match = 0.0%%
@@ -19,7 +19,7 @@ url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-khong-vien-mau-trang-16
 [nemsaithanh.com]
 match = -10.0%%
 title = Chiếu Trúc
-url = https://nemsaithanh.com/chieu-truc-103.html
+url = https://nemsaithanh.com/san-pham/chieu-truc-135.html
 
 [trangvangvietnam.com]
 match = -61.9%%
