--- a/images/vo-goi-ks-uc-50-70/config.ini
+++ b/images/vo-goi-ks-uc-50-70/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ks-uc-50-70.html
 lastopen = 2024-06-10 00:52:12
 
 [search]
-lastsearch = 2024-07-25 01:37:26
+lastsearch = 2024-07-25 02:49:15
 
 [www.lazada.vn]
 match = -27.8%%
@@ -14,7 +14,7 @@ url = https://www.lazada.vn/tag/vo-goi-50x70-trang/
 [ru9.vn]
 match = -38.9%%
 title = Bật Mí: Vỏ Gối Khách Sạn Dùng Loại Gì?
-url = https://ru9.vn/blogs/magazine/vo-goi-khach-san-dung-la-loai-gi
+url = https://ru9.vn/blogs/magazine/vo-goi-khach-san-dung-la-loai-gi?srsltid=AfmBOooVpuhMVteLL4fjdD2iXj-_zS1N2NnaSoprSIYaridhQEzSNppN
 
 [www.diepxuan.com]
 match = -55.6%%
@@ -49,7 +49,7 @@ url = {search_url}
 [ninhouse.vn]
 match = 43.8%%
 title = Vỏ gối khách sạn
-url = https://ninhouse.vn/products/vo-goi-khach-san
+url = https://ninhouse.vn/products/vo-goi-khach-san?srsltid=AfmBOoqVo_Rx3dV4ZHfMOzZHVMl2Hhx7p5tzrp6bf1D177FDOqkRqbL1
 
 [tonybed.vn]
 match = -100.0%%
@@ -89,7 +89,7 @@ url = https://thegioidemviet.vn/vo-goi-khach-san/
 [demxanh.com]
 match = -155.6%%
 title = Chuyên các sản phẩm vỏ gối chính hãng giá rẻ nhất Hà Nội
-url = https://demxanh.com/vo-goi.html
+url = https://demxanh.com/vo-goi.html?srsltid=AfmBOortpDektBoXZp_TRhP-S2ck9Lv1utBMjRb1a_P_zsi51HvsNBph
 
 [templeshalom.ca]
 match = 0.0%%
