--- a/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
+++ b/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda-skysilk.html
 lastopen = 2024-06-10 01:22:44
 
 [search]
-lastsearch = 2024-07-25 01:20:07
+lastsearch = 2024-07-25 03:35:07
 
 [demxanh.com]
 match = 13.8%%
@@ -27,9 +27,9 @@ title = Bộ Chăn Ga Gối Lụa Tencel (Pyeoda Sky Silk) - Nệm Cao Su
 url = https://changagoinemgiasi.com/san-pham/bo-chan-ga-goi-lua-tencel-pyeoda-sky-silk/
 
 [shopee.vn]
-match = -27.6%%
-title = Bộ chăn ga vỏ gối lụa 5 món Skysilk hàng Pyeoda cao cấp ...
-url = https://shopee.vn/Bộ-chăn-ga-vỏ-gối-lụa-5-món-Skysilk-hàng-Pyeoda-cao-cấp-có-túi-đựng-i.60303676.20559202272
+match = -20.7%%
+title = bộ chăn ga pyeoda giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=bộ chăn ga pyeoda&urlold=bo-chan-ga-goi-lua-pyeoda-kt-1m8-mau-lp1/4647385422273837956/3385656584626545253/ 
 
 [thegioidemonline.com]
 match = 34.5%%
@@ -42,9 +42,9 @@ title = Bộ ga lụa phủ Skysilk PYEODA - Đệm 4 Mùa
 url = https://dem4mua.vn/san-pham/bo-ga-lua-phu-skysilk-pyeoda/
 
 [www.diepxuan.com]
-match = 65.5%%
-title = Điệp Xuân Bộ chăn ga gấm Pyeoda SkySilk
-url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda-skysilk.html
+match = 62.1%%
+title = Bộ chăn ga gấm Pyeoda - Điệp Xuân
+url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda.html
 
 [www.facebook.com]
 match = 20.7%%
