--- a/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-epm22063-180x200.html
 lastopen = 2024-06-07 00:34:05
 
 [search]
-lastsearch = 2024-07-25 02:26:51
+lastsearch = 2024-07-25 03:34:55
 
 [everon.com.vn]
 match = 14.8%%
 title = Bộ Chăn Ga Everon EPM 22063
-url = https://everon.com.vn/bo-chan-ga-everon-epm-22063/?srsltid=AfmBOoqLihjAC2km0yEuFSvkp4IjbfGVhenCcLz76sIngP4nZLWHCXxO
+url = https://everon.com.vn/bo-chan-ga-everon-epm-22063/
 
 [everon.online]
 match = -5.0%%
@@ -29,7 +29,7 @@ url = https://www.everonvn.vn/chi-tiet/everon-epm24061.html
 [demxanh.com]
 match = 30.6%%
 title = Bộ chăn ga gối Everon modal EPM22063
-url = https://demxanh.com/bo-chan-ga-goi-everon-modal-epm22063.html?srsltid=AfmBOorAGpoTUxbAVpYom1RQSNIDeA-DVZjZLNc0C08NNvgMhTXM-qnE
+url = https://demxanh.com/bo-chan-ga-goi-everon-modal-epm22063.html
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -37,9 +37,9 @@ title = Bo Ga chun chần bốn mùa EPM22063 180x200
 url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-epm22063-180x200.html
 
 [www.everonvni.vn]
-match = 25.7%%
-title = BỘ CHĂN GA GỐI HOA HẸN ƯỚC EPC23045
-url = https://www.everonvni.vn/bo-chan-ga-goi-hoa-hen-uoc-epc23045/?srsltid=AfmBOoqP_JSVIho35WitQhPSLfTww_O1KSFJP-GEnLYrZbWB7M-TG6sO
+match = 16.7%%
+title = BỘ CHĂN GA GỐI SẮC HẠ ESC23002
+url = https://www.everonvni.vn/bo-chan-ga-goi-sac-ha-esc23002/
 
 [everonhanquoc.vn]
 match = 19.4%%
