--- a/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
+++ b/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/bo-ga-goi-phu-mau-xoa-tin-18.html
 lastopen = 2024-06-09 23:46:35
 
 [search]
-lastsearch = 2024-07-24 23:53:27
+lastsearch = 2024-07-25 03:32:23
 
 [www.diepxuan.com]
-match = 12.0%%
-title = Điệp Xuân Chăn ga gối màu
+match = 3.6%%
+title = Chăn ga gối màu - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/chan-ga-goi-mau.html
 
 [shop.chanrathanhthuy.com]
@@ -27,9 +27,9 @@ title = Top 20+ Bộ Chăn Ga Gối Đệm Cotton Đáng Mua Nhất Hiện Nay
 url = https://foreverbedding.net/mau-chan-ga-goi-dem-cotton
 
 [changagoidemsonghong.com]
-match = -28.6%%
-title = Bộ chăn ga gối Elegance mã E18-10 chính hãng Sông Hồng
-url = https://changagoidemsonghong.com/chan-ga-goi-elegance-ma-e18-10
+match = 35.7%%
+title = Bộ chăn ga gối cao cấp mã UC22-018
+url = https://changagoidemsonghong.com/chan-ga-goi-uc018
 
 [flexhouse.vn]
 match = -17.9%%
