--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-07-24 23:16:36
+lastsearch = 2024-07-25 03:30:23
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -22,8 +22,8 @@ title = TUI Group – The one of the world's leading tourism groups
 url = https://www.tuigroup.com/en-en
 
 [www.tui.nl]
-match = -316.7%%
-title = 16-dg cruise Azië - Noordam (Rondreis) - Zuid-Korea - Japan
+match = -300.0%%
+title = 16-dg cruise Azië - Noordam (Rondreis) - Zuid-Korea - TUI
 url = https://www.tui.nl/16-dg-cruise-azie-noordam-519967721/
 
 [embraer.com]
