--- a/images/tui-warmdream-14/config.ini
+++ b/images/tui-warmdream-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tui-warmdream-14.html
 lastopen = 2024-06-10 00:24:23
 
 [search]
-lastsearch = 2024-07-25 02:49:58
+lastsearch = 2024-07-25 03:30:13
 
 [www.diepxuan.com]
-match = -131.2%%
-title = Túi Warmdream 180x200x09 - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/tui-warmdream-180x200x09.html?srsltid=AfmBOopE4MKj8K0H_BV1BDtbOzpAjH0Mo42EBcT089bij1_Do7FqMvuw
+match = -125.0%%
+title = Túi Warmdream 140x190x09 - Chăn ga gối đệm Điệp Xuân
+url = https://www.diepxuan.com/tui-warmdream-140x190x09.html
 
 [demxanh.com]
 match = -181.2%%
 title = Bảng giá Đệm bông ép Dreamland khuyến mãi mới nhất ...
-url = https://demxanh.com/bang-gia-dem-bong-ep-dreamland-2018.html?srsltid=AfmBOoryGUclVXAK83zeJd5O3Eg0F1XQClgKU4rXaX7H_M5SKZQXSbKX
+url = https://demxanh.com/bang-gia-dem-bong-ep-dreamland-2018.html
 
 [m.facebook.com]
 match = 0.0%%
