--- a/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-180x200-sh.html
 lastopen = 2024-06-07 00:25:35
 
 [search]
-lastsearch = 2024-07-25 04:51:16
+lastsearch = 2024-07-25 05:52:42
 
 [www.diepxuan.com]
 match = 10.0%%
@@ -13,8 +13,8 @@ url = https://www.diepxuan.com/everon/chan-ga-goi-everon.html
 
 [songhongonline.vn]
 match = 0.0%%
-title = Bộ sản phẩm SH_BC23 079
-url = https://songhongonline.vn/products/bo-san-pham-sh-bc23-079
+title = Bộ sản phẩm SH_BC22 057
+url = https://songhongonline.vn/products/bo-chan-ga-goi-song-hong-sh-bc22-057
 
 [everon.online]
 match = 50.0%%
@@ -22,9 +22,9 @@ title = Bộ Ga Chun Chần Everon Bốn Mùa ...
 url = https://everon.online/collections/bo-ga-chun-chan-bon-mua-everon
 
 [antbedding.com]
-match = 20.6%%
-title = Bộ Chăn Ga Gối Tencel Hoàng Gia SH016
-url = https://antbedding.com/bo-chan-ga-goi-tencel-hoang-gia-sh016
+match = -10.5%%
+title = Bộ Chăn Ga Gối Eu04
+url = https://antbedding.com/bo-chan-ga-goi-eu04
 
 [shopee.vn]
 match = 50.0%%
@@ -33,8 +33,8 @@ url = https://shopee.vn/Bộ-ga-chun-chần-bốn-mùa-EVERON-180*200-ESTR-23054
 
 [www.everonvn.vn]
 match = -32.4%%
-title = Everon ESB-22051 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-esb22051.html
+title = Everon ESM-24016 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-esm24016.html
 
 [everonchinhhang.vn]
 match = 0.0%%
@@ -125,4 +125,9 @@ url = https://staging.happynest.com.vn/shop/bo-san-pham-chan-ga-goi-song-hong-ca
 match = 6.2%%
 title = Video help, tips, and techniques
 url = https://archive.org/help/video.php?identifier=jadi-anime-cap-cut-template-4&ht=480&wd=640&url=https://xn--90ab9aidr.xn--p1ai/xNjuoh6fepr
+
+[nem.vn]
+match = 5.9%%
+title = BỘ CHĂN GA GỐI BỐN MÙA EVERON EST-21034 - NEM.VN
+url = https://nem.vn/bo-chan-ga-goi-bon-mua-everon-est-21034
 
