--- a/images/chieu-cay-cao-bang-a-16/config.ini
+++ b/images/chieu-cay-cao-bang-a-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-16.html
 lastopen = 2024-06-09 22:42:42
 
 [search]
-lastsearch = 2024-07-25 04:13:24
+lastsearch = 2024-07-25 05:49:58
 
 [shopee.vn]
 match = -43.5%%
@@ -14,7 +14,7 @@ url = https://shopee.vn/Chiếu-trúc-Tây-Bắc-Cao-Bằng-loại-đẹp-(Mát-
 [www.diepxuan.com]
 match = 26.1%%
 title = Chiếu cây Cao Bằng A 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-160x200.html?srsltid=AfmBOoqv5A93lvzK8p4wY-usaTTgwIAd5oH8o6giNa8h-vpm9wYbcc92
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-160x200.html
 
 [chuyenhangviet.com]
 match = -43.5%%
