--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-25 04:49:01
+lastsearch = 2024-07-25 05:50:30
 
 [www.tiktok.com]
 match = -35.3%%
@@ -17,9 +17,9 @@ title = The Bank of N.Y. Mellon v. Nev. Ass'n Serv.
 url = https://casetext.com/case/the-bank-of-ny-mellon-v-nev-assn-serv
 
 [www.reddit.com]
-match = -141.2%%
-title = The HOA hates this man. : r/suspiciouslyspecific
-url = https://www.reddit.com/r/suspiciouslyspecific/comments/rn50gb/the_hoa_hates_this_man/
+match = -223.5%%
+title = HOA tried to punish us - Told us to "Stop them if we can" - ...
+url = https://www.reddit.com/r/MaliciousCompliance/comments/11n6mmx/hoa_tried_to_punish_us_told_us_to_stop_them_if_we/
 
 [music.apple.com]
 match = -194.1%%
@@ -202,9 +202,9 @@ title = Ảnh: Màn trình diễn pháo hoa tuyệt đẹp của hai đội Mỹ
 url = https://toquoc.vn/anh-man-trinh-dien-phao-hoa-tuyet-dep-cua-hai-doi-my-va-y-20240615215349092.htm
 
 [www.youtube.com]
-match = -94.1%%
-title = Lil Wuyn, 16 BrT, 16 Typh - TOKYO Cypher
-url = https://www.youtube.com/watch?v=TFmq8zuHBm4
+match = -164.7%%
+title = Intruder HOA Guy Fell Into My Pool - Caught On Camera
+url = https://www.youtube.com/shorts/hMyLkrY7ND8
 
 [communityassociations.net]
 match = -35.3%%
@@ -532,8 +532,8 @@ title = Sắc vóc người đẹp đóng phim kinh dị về Tấm Cám
 url = https://vnexpress.net/sac-voc-nguoi-dep-dong-phim-kinh-di-ve-tam-cam-4770681.html
 
 [praktijk-talent.nl]
-match = -5.9%%
-title = Nevada Hoa Fraud - Talent
+match = -194.1%%
+title = Nevada Hoa Fraud. How do I fight charges of "homeowners ...
 url = https://praktijk-talent.nl/tycq/nevada-hoa-fraud
 
 [kuschkedental.co.za]
