--- a/images/man-tu-bung-18/config.ini
+++ b/images/man-tu-bung-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-18.html
 lastopen = 2024-06-10 00:37:41
 
 [search]
-lastsearch = 2024-07-25 01:22:46
+lastsearch = 2024-07-25 05:49:17
 
 [shopee.vn]
 match = -171.4%%
@@ -22,9 +22,9 @@ title = Màn chụp tự bung đỉnh vuông, giá xưởng, hàng việt nam ..
 url = https://tiki.vn/man-chup-tu-bung-dinh-vuong-gia-xuong-hang-viet-nam-100-bao-hanh-18-thang-mung-tu-bung-cao-cap-p170076693.html?spid=175465922
 
 [manthutrang.com]
-match = -200.0%%
-title = MÀN NGỦ CAO CẤP CHO GIA ĐÌNH & KHÁCH SẠN – MÀN ...
-url = https://manthutrang.com/
+match = -207.1%%
+title = Hướng dẫn phân biệt màn tự bung cao cấp và màn nhái ...
+url = https://manthutrang.com/blogs/news/huong-dan-phan-biet-man-tu-bung-cao-cap-va-man-nhai-gia-re
 
 [www.mantubung.com]
 match = -150.0%%
@@ -33,8 +33,8 @@ url = https://www.mantubung.com/mung-chup-tu-bung.html
 
 [www.lazada.vn]
 match = -164.3%%
-title = Màn Ngủ Chụp Tự Bung METTA - Size 1M6x2M- BH 18 ...
-url = https://www.lazada.vn/products/man-ngu-chup-tu-bung-metta-size-1m6x2m-bh-18-thang-hang-chinh-hang-viet-nam-xuat-khau-i294344727.html
+title = Màn chụp tự bung đỉnh vuông Cao Cấp. Mùng gấp ...
+url = https://www.lazada.vn/products/man-chup-tu-bung-dinh-vuong-cao-cap-mung-gap-dinh-vuong-co-chan-vien-gia-tan-xuong-bh-18-thang-i1643502299.html
 
 [www.mungbaobao.com]
 match = -214.3%%
