--- a/images/tui-warmdream-18/config.ini
+++ b/images/tui-warmdream-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-18.html
 lastopen = 2024-06-10 00:27:15
 
 [search]
-lastsearch = 2024-07-25 04:51:27
+lastsearch = 2024-07-25 05:52:33
 
 [www.walmart.com]
 match = -162.5%%
@@ -12,9 +12,9 @@ title = Zury Natural Dream Multi Yaky 18" 20" 22", SOM RT BURG
 url = https://www.walmart.com/ip/Zury-Natural-Dream-Multi-Yaky-18-20-22-SOM-RT-BURG/652131534
 
 [www.tiktok.com]
-match = -25.0%%
-title = Simple Xiangling Build
-url = https://www.tiktok.com/discover/simple-xiangling-build
+match = -181.2%%
+title = Nhà nấm ngày bé mơ được ghé thăm #art #họcvẽcơbản ...
+url = https://www.tiktok.com/@tapvecungnhien/video/7223337440034032901
 
 [www.diepxuan.com]
 match = -162.5%%
@@ -69,7 +69,7 @@ url = https://www.instagram.com/meliahtlresorts/p/CsQkNaANnaw/
 [demxanh.com]
 match = -162.5%%
 title = Đệm bông ép 2m (2mx2m và 2mx2m2) giá bao nhiêu?
-url = https://demxanh.com/dem-bong-ep-2mx2m2-200x220cm-gia-bao-nhieu.html
+url = https://demxanh.com/dem-bong-ep-2mx2m2-200x220cm-gia-bao-nhieu.html?srsltid=AfmBOoqzQ1e1xe8FVLhxM3J_F2egyQMUjZSQu1UDz9ZuYmjlQ1HRBpku
 
 [olm.vn]
 match = -243.8%%
@@ -114,7 +114,7 @@ url = https://www.amazon.com/SYNTHETIC-NATURAL-DREAM-WEAVE-OCEAN/dp/B0812BHZ5Q
 [curlygurlluv.com]
 match = -68.8%%
 title = ZURY NATURAL DREAM BUNDLE- DEEP WAVE 18
-url = https://curlygurlluv.com/products/natural-dream-deep-wave-18
+url = https://curlygurlluv.com/products/natural-dream-deep-wave-18?srsltid=AfmBOorBORjwCfZFAuHSXBRFGk7_dnQfLEEC4yR1jcEJeWP2CC0FaUNv
 
 [www.sephora.com]
 match = 0.0%%
