--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-07-25 00:46:59
+lastsearch = 2024-07-25 06:47:17
 
 [tiki.vn]
-match = -138.9%%
-title = Bộ Chăn Drap Gối Cao Cấp Phủ Màu Thêu Thắng Lợi - Tiki
-url = https://tiki.vn/bo-chan-drap-goi-cao-cap-phu-mau-theu-thang-loi-cam-160-x-200-cm-p7695465.html
+match = -122.2%%
+title = Mua Bộ Chăn Drap Gối Cao Cấp Phủ Màu Thêu Thắng Lợi
+url = https://tiki.vn/bo-chan-drap-goi-cao-cap-phu-mau-theu-thang-loi-xanh-duong-160-x-200-cm-p7855483.html
 
 [nemxinh.net]
 match = 50.0%%
@@ -42,9 +42,9 @@ title = Bộ ga chun Cotton chống thấm màu ghi nhạt
 url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-ghi-nhat.html
 
 [foreverbedding.net]
-match = -66.7%%
-title = Bộ ga phủ Passion A112 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-phu-passion-a112
+match = -72.2%%
+title = Đệm đa năng (Mẫu 2) - Forever Bedding
+url = https://foreverbedding.net/dem-da-nang-mau-2
 
 [aeoneshop.com]
 match = -105.6%%
@@ -150,4 +150,9 @@ url = https://dovihome.vn/giuong-go-dv-20
 match = -144.4%%
 title = BON BON BOKE, Ham Tien - Restaurant Reviews & Photos
 url = https://www.tripadvisor.com/Restaurant_Review-g13172842-d18899030-Reviews-Bon_Bon_Boke-Ham_Tien_Phan_Thiet_Binh_Thuan_Province.html
+
+[demviet.vn]
+match = -111.1%%
+title = Bộ Chăn Ga Gối Kim Cương 5 Món Vải Tencel 1 Màu
+url = https://demviet.vn/bo-chan-ga-goi-kim-cuong-5-mon-vai-tencel-1-mau.html
 
