--- a/images/chieu-cay-moc-hoa16/config.ini
+++ b/images/chieu-cay-moc-hoa16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa16.html
 lastopen = 2024-06-09 22:42:25
 
 [search]
-lastsearch = 2024-07-25 06:34:11
+lastsearch = 2024-07-25 06:47:04
 
 [eva.vn]
 match = -131.6%%
@@ -22,9 +22,9 @@ title = Chiếu trúc Mộc lá cao cấp chất lượng cao đủ kích cỡ
 url = https://shopee.vn/Chiếu-trúc-Mộc-lá-cao-cấp-chất-lượng-cao-đủ-kích-cỡ-i.296736591.8061367106
 
 [mocnhienfarm.com]
-match = 10.5%%
-title = Hoa chiều tím trắng cao E1
-url = https://mocnhienfarm.com/products/hoa-chieu-trang
+match = -7.7%%
+title = Cây pháo bông
+url = https://mocnhienfarm.com/products/cay-phao-bong
 
 [tapchivietnamhuongsac.vn]
 match = -73.7%%
@@ -87,9 +87,9 @@ title = Cây lá bỏng thần kỳ "mọc" ra hoa hồng xanh mướt
 url = https://kenh14.vn/cay-la-bong-than-ky-moc-ra-hoa-hong-xanh-muot-20170424194942725.chn
 
 [saigonhoa.com]
-match = -5.3%%
-title = Cây Hoa Hồng Đỏ Siêu Bông
-url = https://saigonhoa.com/product/cay-hoa-hong-do-sieu-bong/
+match = -89.5%%
+title = 17 cây bóng mát khuyến khích trồng đường phố
+url = https://saigonhoa.com/17-cay-bong-mat-khuyen-khich-trong-duong-pho/
 
 [nongthonviet.com.vn]
 match = -94.7%%
