--- a/images/chieu-dieu-hoa-co-goi-16/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-16.html
 lastopen = 2024-06-06 16:55:12
 
 [search]
-lastsearch = 2024-07-25 04:49:18
+lastsearch = 2024-07-25 06:48:22
 
 [shopee.vn]
 match = 0.0%%
@@ -24,7 +24,7 @@ url = https://goni.vn/chieu-dieu-hoa-goni/
 [demxanh.com]
 match = -25.0%%
 title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html
+url = https://demxanh.com/chieu-dieu-hoa.html?srsltid=AfmBOoqc8y8ftJ4rhV9uwl4vg5-9ad5qpYrTbSozJFgPawCaUfOYzPIR
 
 [giadunganhvan.vn]
 match = 70.8%%
@@ -39,7 +39,7 @@ url = https://thegioinem.com/top-chieu-dieu-hoa-hot-nhat-nam.html
 [sieuthidem.vn]
 match = 16.7%%
 title = Bộ chiếu điều hoà Tencel TC01 - Hà Nội
-url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/
+url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/?srsltid=AfmBOoo5GjPMmZn3EEJzHgrh1nTjOppV3wxE5Io6opj4resxmfLXbNLz
 
 [lybalansieucute.com]
 match = 29.2%%
@@ -52,9 +52,9 @@ title = Có Mấy Loại Chiếu Điều Hòa? Chiếu Điều Hòa Loại Nào 
 url = https://suongtuyet.com/nen-su-dung-chieu-dieu-hoa-loai-nao-chieu-dieu-hoa-loai-nao-tot.html
 
 [www.lazada.vn]
-match = -50.0%%
-title = Chiếu điều hoà mát lạnh tặng kèm 2 bao gối 1.6 x 2. m , ...
-url = https://www.lazada.vn/products/chieu-dieu-hoa-mat-lanh-tang-kem-2-bao-goi-16-x-2-m-chieu-cao-su-tran-3-lop-mem-min-i2412274423.html
+match = -33.3%%
+title = Chiếu Mây Điều Hòa Hàng Xuất Khẩu Cao Cấp,Đủ kích cỡ
+url = https://www.lazada.vn/products/chieu-may-soi-nho-dieu-hoa-chieu-dieu-hoa-16-x-19m-chieu-may-dieu-hoa-hang-xuat-khau-cao-capdu-kich-co-chieu-du-lich-chieu-an-com-chieu-trai-giuong-i2106465649.html?srsltid=AfmBOoouLKdLiObNmWYnIgnz7SOOLt_vwXWku8pfGdPtmJtyhVndtjPN
 
 [ababy.com.vn]
 match = -4.2%%
@@ -89,7 +89,7 @@ url = https://xn--nekiovitnam-y69e.vn/bang-gia-chieu-may-dieu-hoa-2023/
 [vtvhyundai.vn]
 match = -37.5%%
 title = RUITON - Chiếu điều hoà 1m6 x 2m (Kèm 2 vỏ gối cao su)
-url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691
+url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691?srsltid=AfmBOoqN1SJ_dKUhJCxRhrGH85qpz807dsx2affFnkLp2eCtwJQ6VOKG
 
 [nemuytin.com]
 match = -41.7%%
