--- a/images/chieu-nhua-ha-noi-du-lich-16/config.ini
+++ b/images/chieu-nhua-ha-noi-du-lich-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-16.html
 lastopen = 2024-06-09 23:14:36
 
 [search]
-lastsearch = 2024-07-25 06:20:22
+lastsearch = 2024-07-25 06:45:03
 
 [www.diepxuan.com]
 match = 42.9%%
 title = Chiếu nhựa Hà Nội 150x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-150x190.html
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-150x190.html?srsltid=AfmBOooTYbREnDUbxxthewbfwOcfaDfEQZiJef6FshYz0FfvsZfphfLo
 
 [shopee.vn]
 match = 35.7%%
