--- a/images/chieu-truc-thai-den-160x200/config.ini
+++ b/images/chieu-truc-thai-den-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-thai-den-160x200.html
 lastopen = 2024-06-30 02:08:23
 
 [search]
-lastsearch = 2024-07-25 04:44:36
+lastsearch = 2024-07-25 06:48:32
 
 [demxanh.com]
-match = -18.5%%
-title = Bảng giá chiếu trúc hạt Trường Sinh mới nhất 2022
-url = https://demxanh.com/bang-gia-chieu-truc-hat-truong-sinh-moi-nhat-2019.html
+match = 37.0%%
+title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
+url = https://demxanh.com/chieu-truc-den.html
 
 [demre.com.vn]
 match = 66.7%%
@@ -32,9 +32,9 @@ title = Chiếu trúc hạt đen giá tốt
 url = https://thegioidemonline.com/chieu-hat-den.html
 
 [kyoryo.vn]
-match = -18.5%%
-title = Chiếu Tre Shikada Nhật Bản cao cấp 160x200cm - Kyoryo
-url = https://kyoryo.vn/chieu-cao-cap/chieu-tre-shikada-nhat-ban-cao-cap-160x200cm.html
+match = 11.1%%
+title = Chiếu Tre Nekio cao cấp 160x200cm - Kyoryo
+url = https://kyoryo.vn/chieu-cao-cap/chieu-tre-nekio-cao-cap-160x200.html
 
 [thegioidemviet.vn]
 match = 3.7%%
@@ -47,9 +47,9 @@ title = Điệp Xuân Chiếu trúc Thái đen 160x200
 url = https://www.diepxuan.com/chieu-truc-thai-den-160x200.html
 
 [shopee.vn]
-match = -18.5%%
-title = Chiếu tre gấp vân gỗ Thái Lan 200x220| 180x200| 160x200
-url = https://shopee.vn/Chiếu-tre-gấp-vân-gỗ-Thái-Lan-200x220-180x200-160x200-i.334752746.7193995503
+match = -48.1%%
+title = Chiếu Tre Việt Phổ Mến Thái Bình 100%% made in Việt Nam ...
+url = https://shopee.vn/Chiếu-Tre-Việt-Phổ-Mến-Thái-Bình-100-made-in-Việt-Nam-đan-thủ-công-chắc-chắn-i.334752746.9933777878
 
 [tiki.vn]
 match = -7.4%%
