--- a/images/tam-trang-tri-ks-uc/config.ini
+++ b/images/tam-trang-tri-ks-uc/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/tam-trang-tri-ks-uc.html
 lastopen = 2024-06-10 00:08:10
 
 [search]
-lastsearch = 2024-07-25 06:34:56
+lastsearch = 2024-07-25 06:46:10
 
 [demxanh.com]
-match = -84.2%%
-title = Tấm trang trí khách sạn giá rẻ nhất tại hệ thống ...
+match = -131.6%%
+title = Tấm trang trí khách sạn giá rẻ nhất tại hệ thống Demxanh. ...
 url = https://demxanh.com/tam-trang-tri-khach-san.html
 
 [thegioidemviet.vn]
@@ -42,9 +42,9 @@ title = Hoi An Memories Resort & Spa
 url = https://hoianmemoriesresort.com/
 
 [www.tripadvisor.com.vn]
-match = -94.7%%
-title = 10 Khách sạn Sang trọng nhất tại Úc - Tripadvisor
-url = https://www.tripadvisor.com.vn/Hotels-g255055-zff12-Australia-Hotels.html
+match = -73.7%%
+title = 10 Khách sạn tốt nhất tại Úc - Tripadvisor
+url = https://www.tripadvisor.com.vn/Hotels-g255055-Australia-Hotels.html
 
 [3rvietnam.com.vn]
 match = 0.0%%
@@ -107,8 +107,8 @@ title = Torrens University: du học Úc chi phí hợp lý ngành Du lịch ...
 url = https://dreamworld.edu.vn/torrens-university-du-hoc-uc-chi-phi-hop-ly-nganh-du-lich-khach-san-thiet-ke-mba-n2424.html
 
 [khanspacaocap.com]
-match = -121.1%%
-title = [Bật Mí] 5+ Kiểu Gấp KHĂN TẮM Trang Trí Phòng Khách Sạn ...
+match = -105.3%%
+title = [Bật Mí] 5+ Kiểu Gấp KHĂN TẮM Trang Trí Phòng Khách ...
 url = https://khanspacaocap.com/gap-khan-tam-trang-tri-phong-khach-san/
 
 [a-emhotels.com]
